blog-bt/infra/k8s/comments-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1
  selector:
    # comments-depl va tomar como suyos todos los pods que tengan una etiqueta app:comments
    matchLabels:
      app: comments
  template: # Me ayuda a definir metadata a los objetos de este deployment
    metadata:
      labels: # Agrego una etiqueta a los recursos que estan en este deployment
        app: comments
    spec:
      containers:
        - name: comments
          image: bantrab/ms-comments
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  # type: NodePort
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
    #  nodePort: 30001
