blog-bt/infra/k8s/event-bus-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  replicas: 1
  selector:
    # event-bus-depl va tomar como suyos todos los pods que tengan una etiqueta app:event-bus
    matchLabels:
      app: event-bus
  template: # Me ayuda a definir metadata a los objetos de este deployment
    metadata:
      labels: # Agrego una etiqueta a los recursos que estan en este deployment
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: bantrab/ms-event-bus
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  #type: NodePort
  selector:
    app: event-bus
  ports:
    - name: event-bus
      protocol: TCP
      port: 4005
      targetPort: 4005
    #  nodePort: 30005
