blog-bt/infra/k8s/moderation-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  replicas: 1
  selector:
    # moderation-depl va tomar como suyos todos los pods que tengan una etiqueta app:moderation
    matchLabels:
      app: moderation
  template: # Me ayuda a definir metadata a los objetos de este deployment
    metadata:
      labels: # Agrego una etiqueta a los recursos que estan en este deployment
        app: moderation
    spec:
      containers:
        - name: moderation
          image: bantrab/ms-moderation
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  # type: NodePort
  selector:
    app: moderation
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
    #  nodePort: 30003
