blog-bt/infra/k8s/query-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1
  selector:
    # query-depl va tomar como suyos todos los pods que tengan una etiqueta app:query
    matchLabels:
      app: query
  template: # Me ayuda a definir metadata a los objetos de este deployment
    metadata:
      labels: # Agrego una etiqueta a los recursos que estan en este deployment
        app: query
    spec:
      containers:
        - name: query
          image: bantrab/ms-query
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  #type: NodePort
  selector:
    app: query
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
    #   nodePort: 30002
